add login to firbase

--- a/client/src/pages/Auth/Login.css
+++ b/client/src/pages/Auth/Login.css
@@ -19,3 +19,11 @@
     height: 30px !important;
 
 }
+
+.signUpText {
+  margin-top: 10px;
+    text-decoration: none;
+    color: white;
+    
+
+}
