--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,13 +43,14 @@ background-color: white;
 /* footer design */
 .footer {
   color: white;
-  padding: 25px;
-  background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
+  
+  margin-top: 12px;
+  /* background: #000000; fallback for old browsers */
+  /* background: -webkit-linear-gradient(
     to right,
     #434343,
     #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  );  */
   background: linear-gradient(to right, #434343, #000000);
 }
 
