--- a/client/src/pages/Auth/Login.css
+++ b/client/src/pages/Auth/Login.css
@@ -1,6 +1,10 @@
-.btn{
+.btn1{
     width:100%;
     margin-top:6px;
+    background-color: #0d6efd;
+    color: white;
+    border-radius: 10px;
+    padding: 6px;
 }
 .g-btn {
     border: 1px solid;
