--- a/client/src/pages/Style/Auth.css
+++ b/client/src/pages/Style/Auth.css
@@ -8,7 +8,8 @@
     min-height: 60vh;
     flex-direction: column;
     background-color: #ffdee9;
-    background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+    /* background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%); */
+    background-color: rgba(128, 128, 128, 0.097);
   }
   
   .form-container form {
